--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ input{
     margin-top: 100px;
     margin-bottom: 20px;
 }
-.b-buttons{
+.s-buttons{
     padding: 10px 25px;
     border: none;
     border-radius: 0 8px 8px 0;
