--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+.navbar{
+    
+}
 .pinkish-bg{
     background-color: #fceae8;
     border-radius: 10px;
@@ -60,7 +63,7 @@ main{
 #Subscribe{
     height: 300px;
     border: none;
-    border-radius:0%;
+    border-radius:10px;
     margin-top: 100px;
     
 }
@@ -71,7 +74,7 @@ main{
 input{
     border-radius:  8px 0 0 8px;
     border: none;
-    width: 253px;
+    width: 200px;
     height: 48px;
 }
 .copyright{
